--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "enzyme-adapter-react-16": "^1.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
@@ -33,7 +34,10 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
+    "enzyme": "^3.3.0",
+    "jest": "^24.9.0",
     "jest-dom": "^4.0.0",
+    "jest-enzyme": "^7.1.2",
     "react-test-renderer": "^16.12.0"
   }
 }
